--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
+    <title>Recipe App!</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="static/js/recipe_collector.js"></script>
@@ -17,24 +17,19 @@
       <p class="subtitle">
         Collector your recipies now! <strong>YUMMY</strong>!
         <Br>
-        <button id="button1" class="button is-info">Info</button>
+        <button id="button2" class="button is-info">get data</button>
       </p>
-
-      <p id="newP">
-      </p>
-
-      <p>
-        Passed: {{ output }}
-      </p>
+    
+      <p id="table_here"></p>
 
     </div>
   </section>
 
   <script>
-    $('#button1').click(function(){
-        new_text = "new writing on page"
-        $('#newP').html(new_text)
-        firsttry()
+
+    $('#button2').click(function(){
+      console.log("get data button pressed.")
+      ajax_call()
     })
 
   </script>
